模板，传递数据

--- a/templates/booktest/show.html
+++ b/templates/booktest/show.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Hello world！</h1>
     <ul>
-        {% for book in list %}
-            <li><a href="{{ book.id }}">{{ book }}</a></li>
+        {% for hero in list %}
+            <li>{{ hero.hname }}</li>
         {% endfor %}
     </ul>
 </body>
