反向解析及模板继承

--- a/templates/booktest/index.html
+++ b/templates/booktest/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'booktest/base.html' %}
+
+{% block content %}
     <h1>Hello world！</h1>
     <ul>
         {% for book in list %}
-            <li><a href="{{ book.id }}">{{ book }}</a></li>
+            <li><a href="{% url 'booktest:show' book.id %}">{{ book }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock content %}
