--- a/templates/booktest/postTest1.html
+++ b/templates/booktest/postTest1.html
@@ -7,6 +7,7 @@
 <body>
     <form method="post" action="/postTest2/">
 {#        最后必须是以/结尾#}
+        {% csrf_token %}
         用户名：<input type="text" name="uname"> <br>
         密  码：<input type="password" name="upwd"> <br>
         性别：<input type="radio" name="ugender" value="男" checked>男
